<?xml version="1.0"?>
<package format="3">
  <name>wheelchair_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 semi-assisted control layer for the wheelchair firmware.</description>
  <maintainer email="vitorg.a.s@hotmail.com">Wheelchair Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
